# zig-docs-mcp

./: Cargo.toml  LICENSE  README.md
src/: docs.rs  main.rs  zig.md
